# kenobi-semantic-release-poc

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  RELEASE_MANAGER_GUIDE.md  WRITEUP.md  package.json  pyproject.toml
.github/workflows/: pr-title-lint.yml  promote.yml  release-and-dev.yml
app/: api_v2.py  develop_feature.py  healthcheck.py  middleware.py  security_patch.py
final-workflows/: README.md  pr-title-lint.yml  promote.yml  release-and-dev.yml
